--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
           <div class="time">9:30 - 10:00 AM</div>
           <div class="event">
             <strong>David Lagnado</strong><br>
-            <em>Title: TBD</em>
+            <em>Causal reasoning about causal reasoning</em>
           </div>
         </div>
         <div class="schedule-item">
