--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <div class="time">9:00 - 9:30 AM</div>
           <div class="event">
             <strong>Anna Ivanova</strong><br>
-            <em>Title: TBD</em>
+            <em>Semantic knowledge and reasoning: a neuroscience approach</em>
           </div>
         </div>
         <div class="schedule-item">
