--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           <div class="time">10:30 - 11:00 AM</div>
           <div class="event">
             <strong>Marcelo Mattar</strong><br>
-            <em>Title: TBD</em>
+            <em>Modeling human planning with RNNs</em>
           </div>
         </div>
         <div class="schedule-item">
