--- a/index.html
+++ b/index.html
@@ -396,53 +396,66 @@
       <h2><i class="bi bi-clock"></i> Schedule</h2>
       <div class="schedule-container">
         <div class="schedule-item">
-          <div class="time">8:30 - 9:00 AM</div>
+          <div class="time">8:30 - 8:40 AM</div>
+          <div class="event">
+            <strong>Opening</strong><br>
+            <em>Welcome and introduction</em>
+          </div>
+        </div>
+        <div class="schedule-item">
+          <div class="time">8:40 - 9:00 AM</div>
           <div class="event">
             <strong>Ulrike Hahn</strong><br>
             <em>Title: TBD</em>
           </div>
         </div>
         <div class="schedule-item">
-          <div class="time">9:00 - 9:30 AM</div>
+          <div class="time">9:00 - 9:20 AM</div>
           <div class="event">
             <strong>Anna Ivanova</strong><br>
             <em>Semantic knowledge and reasoning: a neuroscience approach</em>
           </div>
         </div>
         <div class="schedule-item">
-          <div class="time">9:30 - 10:00 AM</div>
+          <div class="time">9:20 - 9:40 AM</div>
           <div class="event">
             <strong>David Lagnado</strong><br>
             <em>Causal reasoning about causal reasoning</em>
           </div>
         </div>
         <div class="schedule-item">
+          <div class="time">9:40 - 10:00 AM</div>
+          <div class="event">
+            <strong>Andrew Lampinen</strong><br>
+            <em>Title: TBD</em>
+          </div>
+        </div>
+        <div class="schedule-item panel">
           <div class="time">10:00 - 10:30 AM</div>
           <div class="event">
-            <strong>Andrew Lampinen</strong> ☕<br>
-            <em>Title: TBD<br>
-            (Refreshments available during presentation)</em>
+            <strong>☕ Refreshment Break</strong><br>
+            <em>No talks during this time</em>
           </div>
         </div>
         <div class="schedule-item">
-          <div class="time">10:30 - 11:00 AM</div>
+          <div class="time">10:30 - 10:50 AM</div>
           <div class="event">
             <strong>Marcelo Mattar</strong><br>
             <em>Modeling human planning with RNNs</em>
           </div>
         </div>
         <div class="schedule-item">
-          <div class="time">11:00 - 11:30 AM</div>
+          <div class="time">10:50 - 11:10 AM</div>
           <div class="event">
             <strong>Mark Ho</strong><br>
             <em>Title: TBD</em>
           </div>
         </div>
         <div class="schedule-item panel">
-          <div class="time">11:30 - 12:00 PM</div>
+          <div class="time">11:10 - 12:00 PM</div>
           <div class="event">
-            <strong>🎤 Panel Discussion</strong><br>
-            <em>All speakers + audience Q&A</em>
+            <strong>Panel Discussion</strong><br>
+            <em>All speakers + audience Q&amp;A</em>
           </div>
         </div>
       </div>
@@ -477,3 +490,4 @@
   </div>
 </body>
 </html>
+
