--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
           <div class="time">10:25 - 10:50 AM</div>
           <div class="event">
             <strong>Andrew Lampinen</strong><br>
-            <em>Title: TBD</em>
+            <em>Rational analysis of reasoning behaviors in humans and language models</em>
           </div>
         </div>
         <div class="schedule-item">
