--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           <div class="time">11:15 - 11:40 AM</div>
           <div class="event">
             <strong>Mark Ho</strong><br>
-            <em>Title: TBD</em>
+            <em>Reasoning and representation in human planning</em>
           </div>
         </div>
         <div class="schedule-item panel">
