--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <div class="time">8:40 - 9:05 AM</div>
           <div class="event">
             <strong>Ulrike Hahn</strong><br>
-            <em>Title: TBD</em>
+            <em>What <i>is</i> reasoning, anyway?</em>
           </div>
         </div>
         <div class="schedule-item">
